--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,10 @@ body,
   height: 100%
 }
 
+/* html {
+  scroll-behavior: smooth;
+} */
+
 .custom-scrollbar {
   scrollbar-width: thin; 
   scrollbar-color: rgba(0, 0, 0, 0.2) transparent; 
