--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,7 +102,7 @@ body,
   }
 
   .about-title-type {
-    @apply rounded-xl bg-gray-100 font-semibold text-xl capitalize p-4
+    @apply rounded-xl bg-gray-100 font-semibold text-xl p-4
   }
 
   .about-title-contact {
