--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,4 +108,26 @@ body,
   .about-title-contact {
     @apply rounded-xl bg-gray-100 font-semibold text-xl p-4
   }
+
+  .motion-gradient-word {
+    @apply bg-[linear-gradient(to_right,#DD7DDF,#E1CD86,#BBCB92,#71C2EF,#3BFFFF,#DD7DDF,#E1CD86,#BBCB92,#71C2EF,#3BFFFF)] [background-size:200%] text-transparent bg-clip-text animate-xy
+  }
+
+  .normal-gradient-bg {
+    @apply bg-gradient-to-r from-orange-300 via-purple-700 to-orange-800 opacity-30
+  }
+}
+
+@keyframes gradient-xy {
+  0%, 100% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+}
+
+.animate-xy {
+  animation: gradient-xy 5s ease infinite;
+  background-size: 200% 200%;
 }
